--- a/index.html
+++ b/index.html
@@ -4,68 +4,78 @@
   <meta charset="utf-8">
   <title>Registration form</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/grid.css" rel="stylesheet">
   <link href="css/modules.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
 
-  <section>
+  <section class="wrapper contact pad-t pad-b m-1-4">
+    <div class="max-length island">
+      <h1 class="exa">Want to go to Mars?</h1>
 
-    <form>
-      <h1>Want to go to Mars?</h1>
+      <p class="mega ">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
 
-      <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
+      <form class="push-0" method="POST" action="https://formspree.io/kar.hodgk@gmail.com">
 
         <fieldset>
-          <legend>Personal details</legend>
-          <div>
-            <label for="name">Name</label>
-            <input id="name" required>
+          <legend class="mega gutter italic push">Personal details</legend>
+
+          <div class="grid kilo">
+
+            <div class="unit xs-1 l-1-2 push">
+              <label for="name">Name</label>
+              <input id="name" name="name">
+            </div>
+
+            <div class="unit xs-1 l-1-2 push">
+              <label for="age">Age</label>
+              <input id="age">
+            </div>
+
+            <div class="unit xs-1 l-1-2 push">
+              <label for="email">Email</label>
+              <input id="email" type="email" required>
+            </div>
+
+            <div class="unit xs-1 l-1-2 push">
+              <label for="fitness">Physical fitness</label>
+              <select id="fitness" name="fitness">
+                <option>Super-human</option>
+                <option>Fit as a fiddle</option>
+                <option>Not terribly strong</option>
+                <option>A little couch-potato-y</option>
+              </select>
+            </div>
+
+            <div class="unit xs-1 ">
+              <label for="address">Address</label>
+              <textarea id="address" name="address"></textarea>
+            </div>
+
           </div>
-          <div>
-            <label for="age">Age</label>
-            <input id="age">
-          </div>
-          <div>
-            <label for="email">Email</label>
-            <input id="email" required>
-          </div>
 
-        <div>
-          <label for="fitness">Physical fitness</label>
-          <select id="fitness">
-            <option>Super-human</option>
-            <option>Fit as a fiddle</option>
-            <option>Not terribly strong</option>
-            <option>A little couch-potato-y</option>
-          </select>
-        </div>
+        </fieldset>
 
-        <div>
-          <label for="address">Address</label>
-          <textarea id="address" required>
-        </div>
+        <fieldset>
+          <legend class=" mega italic gutter">Mission statement</legend>
 
-      </fieldset>
-
-      <fieldset>
-          <legend>Mission statement</legend>
-          <div>
+          <div class="">
             <label for="mars">Why do you want to go to Mars?</label>
-            <textarea id="mars">
+            <textarea id="mars"></textarea>
           </div>
 
-      <div>
-        <button type="submit">Register for the trip!</button>
-      </div>
+        </fieldset>
 
-      </fieldset>
-
-    </form>
-  </div>
-</section>
+        <div class="text-center">
+          <button class="btn" type="submit">Register for the trip!</button>
+          <input type="hidden" name="_subject" value="Request to join the mission!">
+        </div>
+      </form>
+    </div>
+  </section>
 
 </body>
 </html>
